--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,24 @@
 autopep8==2.3.2
+branca==0.8.1
+certifi==2025.4.26
+charset-normalizer==3.4.2
 flake8==7.2.0
+folium==0.19.7
+idna==3.10
+Jinja2==3.1.6
 markdown-it-py==3.0.0
+MarkupSafe==3.0.2
 mccabe==0.7.0
 mdurl==0.1.2
 mypy==1.16.0
 mypy_extensions==1.1.0
+numpy==2.3.0
 pathspec==0.12.1
 pycodestyle==2.13.0
 pyflakes==3.3.2
 Pygments==2.18.0
+requests==2.32.4
 rich==13.9.4
 typing_extensions==4.14.0
+urllib3==2.4.0
+xyzservices==2025.4.0
